# pages/api/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Movie API
-  description: API to manage movies and comments.
+  description: API to manage movies and comments with user authentication.
   version: "1.0.0"
 servers:
   - url: "http://localhost:3000"
@@ -9,6 +9,8 @@ servers:
 paths:
   /api/movies:
     get:
+      tags:
+        - default
       summary: Get a list of all movies
       responses:
         "200":
@@ -20,6 +22,8 @@ paths:
                 items:
                   $ref: "#/components/schemas/Movie"
     post:
+      tags:
+        - default
       summary: Add a new movie
       requestBody:
         required: true
@@ -32,6 +36,8 @@ paths:
           description: Movie created
   /api/movie/{idMovie}:
     get:
+      tags:
+        - default
       summary: Get a movie by ID
       parameters:
         - in: path
@@ -47,6 +53,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Movie"
     put:
+      tags:
+        - default
       summary: Update a movie by ID
       parameters:
         - in: path
@@ -64,6 +72,8 @@ paths:
         "200":
           description: Movie updated
     delete:
+      tags:
+        - default
       summary: Delete a movie by ID
       parameters:
         - in: path
@@ -76,6 +86,8 @@ paths:
           description: Movie deleted
   /api/movie/comments:
     get:
+      tags:
+        - default
       summary: Get a list of all comments for a movie
       parameters:
         - in: query
@@ -93,6 +105,8 @@ paths:
                 items:
                   $ref: "#/components/schemas/Comment"
     post:
+      tags:
+        - default
       summary: Add a new comment
       requestBody:
         required: true
@@ -105,6 +119,8 @@ paths:
           description: Comment created
   /api/movie/comment/{idComment}:
     get:
+      tags:
+        - default
       summary: Get a comment by ID
       parameters:
         - in: path
@@ -120,6 +136,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Comment"
     put:
+      tags:
+        - default
       summary: Update a comment by ID
       parameters:
         - in: path
@@ -137,6 +155,8 @@ paths:
         "200":
           description: Comment updated
     delete:
+      tags:
+        - default
       summary: Delete a comment by ID
       parameters:
         - in: path
@@ -147,6 +167,41 @@ paths:
       responses:
         "200":
           description: Comment deleted
+  /api/auth/register:
+    post:
+      tags:
+        - auth
+      summary: Register a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        "201":
+          description: User registered
+  /api/auth/login:
+    post:
+      tags:
+        - auth
+      summary: Login a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Login"
+      responses:
+        "200":
+          description: User logged in
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
 components:
   schemas:
     Movie:
@@ -191,3 +246,31 @@ components:
         date:
           type: string
           format: date-time
+    User:
+      type: object
+      required:
+        - username
+        - email
+        - password
+      properties:
+        username:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+    Login:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+tags:
+  - name: default
+    description: Endpoints related to movies and comments
+  - name: auth
+    description: Authentication related endpoints
